examples/valid/36_handle_block_subject.lane
module Examples.Valid.HandleBlockSubject

import Basic.Io.{Io, Write}

import Basic.Ops.*

effect Console {
  read() -> Int
}

pub let handled_value : Int = {
  handle {
    let base : Int = 40
    base + Console::read!()
  } with {
    Console::read(resume) => resume(2)
  } final value {
    value
  }
}

pub fn answer() -> Unit ! Io {
  if handled_value == 42 {
    Write::println!("42")
  } else {
    Write::println!("bad:42")
  }
}
